turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: object java.awt.Color is not a value
if (Color=Color.white){
    ^